crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-2e405c78cb80.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-2e405c78cb80.js
---
// Valid because hooks can call hooks.
function useHook() {
	useState() && a;
}
