crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-33a6e23edac1.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-33a6e23edac1.js
---
// @expectNothingCompiled @compilationMode:"infer"
// Valid because hooks can use hooks.
function createHook() {
	return function useHookWithHook() {
		useHook();
	};
}
