crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-347b0dae66f1.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-347b0dae66f1.js
---
// Valid because functions can call functions.
function normalFunctionWithNormalFunction() {
	doSomething();
}
