crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-485bf041f55f.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-485bf041f55f.js
---
// Valid because functions can call functions.
function functionThatStartsWithUseButIsntAHook() {
	if (cond) {
		userFetch();
	}
}
