crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-4f6c78a14bf7.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-4f6c78a14bf7.js
---
// Valid although unconditional return doesn't make sense and would fail other rules.
// We could make it invalid but it doesn't matter.
function useUnreachable() {}
