crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-7e52f5eec669.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-7e52f5eec669.js
---
// Valid because components can call functions.
function ComponentWithNormalFunction() {
	doSomething();
}
