crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-844a496db20b.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-844a496db20b.js
---
// Valid because hooks can use hooks.
function useHookWithHook() {
	useHook();
}
